# docassemble-MLRIRequestAccomodationsFromLandlord

./: MANIFEST.in  README.md  pyproject.toml  setup.py
docassemble/MLRIRequestAccomodationsFromLandlord/data/questions/: requestaccomodationsfromlandlord.yml
docassemble/MLRIRequestAccomodationsFromLandlord/data/templates/: reasonable-accomodation-request-letter-to-landlord-v2.docx  requestaccomodationsfromlandlord.docx  requestaccomodationsfromlandlord_next_steps.docx
