[build-system]
requires = [
    "setuptools==80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.MLRIRequestAccomodationsFromLandlord"
version = "1.0"
description = "A Docassemble Interview to Request Accommodations from Landlord"
readme = "README.md"
authors = [
    { name = "KP Hunsinger", email = "wkh06781@su.suffolk.edu" },
]
dependencies = [
    "docassemble.AssemblyLine @ git+https://github.com/SuffolkLITLab/docassemble-AssemblyLine.git@main",
]

[project.urls]
Homepage = "https://courtformsonline.org"

[tool.setuptools.packages.find]
where = [
    ".",
]
